# midgard-mono

./: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.in  midgard-sharp.snk
debian/: changelog  control  copyright  midgard-sharp.install  rules
doc/: Makefile.am  midgard-sharp-docs.source
doc/en/: GtkSharp.MidgardSharp.xml  Midgard.xml  index.xml
doc/en/GtkSharp.MidgardSharp/: ObjectManager.xml
doc/en/Midgard/: Blob.xml  Collector.xml  Config.xml  Connection.xml  ConnectionCache.xml  Context.xml  DBObject.xml  DBType.xml  Dbus.xml  HttpHost.xml  Metadata.xml  MgdErrorGeneric.xml  MgdObject.xml  MgdParamSpecLongtext.xml  MgdSchema.xml  MgdSchemaTypeAttr.xml  MgdUserinfo.xml  MidgardCollector.xml.remove  MidgardConfig.xml.remove  MidgardConnection.xml.remove  MidgardDbobject.xml.remove  MidgardMysql.xml.remove  MidgardObject.xml.remove  MidgardQueryBuilder.xml  MidgardReplicator.xml.remove  MidgardRes.xml.remove  MidgardSitegroup.xml.remove  MidgardUser.xml.remove  Object.xml  Qlimit.xml  QueryBuilder.xml  Replicator.xml  RequestConfig.xml  Schema.xml  Sitegroup.xml  TypeAuth.xml  TypeHolder.xml  User.xml
midgard/: AssemblyInfo.cs.in  Makefile.am  midgard-api.raw  midgard-api.xml  midgard-sharp.pc.in  midgard.metadata
samples/: Makefile.am  QuerySelect.cs  config.cs  connection.cs  objects.cs  schema.cs  storage.cs
sources/: Makefile.am  fix-headers.sh.in  midgard-sharp-sources.xml.in
